<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mudar_senha_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/otherTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/sair"
        android:textAlignment="center" />

    <TextView
        style="@style/otherTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Tem certeza que quer sair?"
        android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/purpleButtonText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_height_button"
        android:layout_marginStart="@dimen/space_forty_five"
        android:layout_marginTop="@dimen/space_twenty_four"
        android:layout_marginEnd="@dimen/space_forty_five"
        android:background="@drawable/button_background"
        android:text="@string/sim" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/trocar_senha_button"
        style="@style/transparentButtonText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_height_button"
        android:layout_marginStart="@dimen/space_forty_five"
        android:layout_marginTop="@dimen/space_twenty_four"
        android:layout_marginEnd="@dimen/space_forty_five"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background_stroke"
        android:text="@string/nao" />

</LinearLayout>
